--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -129,12 +129,14 @@ nav li {
 	text-align: center;
 	margin-bottom: 1em;
 }
+
+/* Modifications des gaps pour l'espacement des éléments de la gallery */
 .gallery {
 	width: 100%;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 20px;
-	grid-row-gap: 20px;
+	grid-column-gap: 18px;
+	grid-row-gap: 38px;
 }
 
 .gallery img {
