--- a/FrontEnd/assets/formStyle.css
+++ b/FrontEnd/assets/formStyle.css
@@ -53,8 +53,9 @@ body {
 .form-head {
 	display: flex;
 	justify-content: space-between;
-	margin: 50px 150px 150px 150px;
+	padding: 50px 150px 150px 150px;
     align-items: center;
+	height: 42px;
 }
 
 
@@ -86,41 +87,45 @@ h2{
 
 }
 #contactForm h2{
-	margin-bottom: 20px;
+	margin-bottom: 7px;
+	height: 36px;
 }
 #contactForm form {
 	text-align: left;
-	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
 
 #contactForm input {
-	height: 50px;
-	font-size: 1.2em;
+	height: 51px;
 	border: none;
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	padding-bottom: 0px;
+    width: 375px;
 }
+
 #contactForm label {
-	margin: 2em 0 1em 0;
+	margin: 30px 0 6px 0;
+	font-size: 14px;
+	height: 16px;
 }
 
 
-input[type="submit"]{
+#contactForm input[type="submit"]{
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
 	background-color: #1D6154;
-	margin : 2em auto ;
+	margin: 37px auto 28px auto;
 	width: 180px;
 	text-align: center;
 	border-radius: 60px ;
+	height: 36px;
 }
 
 .footerContent nav ul {
 	display: flex;
 	justify-content: flex-end;
-	margin: 2em
 }
 
 /******************* REGLAGE SESSION AUTHENTIFICATION ******************************/
@@ -141,10 +146,9 @@ nav li a{
 	font-weight: 700;
 }
 
-/* Alignement des textes à gauche , marge extérieur et mise en forme en colonne  */
+/* Alignement des textes à gauche et mise en forme en colonne  */
 #contactForm form {
 	text-align: left;
-	margin-top:30px;
 	display: flex;
 	flex-direction: column;
 }
@@ -154,11 +158,12 @@ nav li a{
 	display: block;
 	font-size: 14px;
 	text-decoration: underline;
+	padding: 1px;
 }
 
 /* Mise en position des conditions générales */
-.footerContent nav ul{
-	margin: 8em;
+.footerContent nav li{
+	padding: 24px 107px 20px 0;
 }
 
 /* Mise en place du fond blanc pour le footer, sizing de la hauteur, espacement avec l'élement avant
@@ -169,5 +174,5 @@ et centrage */
 	display: flex;
 	justify-content: flex-end;
 	align-items:center;
-	margin-top: 350px;
+	margin-top: 355px;
 }
