--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -296,6 +296,37 @@ une mise en couleur verte pour les textes, sizing à 16px et ajout des marges in
 
 /*************************************** PARTIE ADMIN **************************************************/
 
+/********************* En-tête édition  *****************************/
+/* Activation des différentes éléments du mode édition Admin */
+
+#portfolio i.active, .editionMode.active{
+	display:flex;
+}
+
+/* Sizing, mise en forme et positionnement sur sticky pour le garder dans le flux normal de la page et le régle sur fixed au scroll */
+.editionMode{
+	background-color: black;
+	height: 59px;
+	position: sticky;
+	top: 0px;
+	display: none;
+	justify-content: center;
+	align-items: center;
+	gap: 21px;
+}
+
+/* Icone mise en blanc */
+.editionMode i{
+	color: white;
+}
+
+/* Mise en forme de la couleur, taille et police du texte */
+.editionModeTxt{
+	font-size: 16px;
+  	font-family: "Work Sans";
+	color: white;
+}
+
 /* Changement du curseur souris au survol des boutons du site  */
 button:hover, #portfolio i{
 	cursor: pointer;
@@ -307,14 +338,6 @@ button:hover, #portfolio i{
 	justify-content: center;
 }
 
-/* Mise en forme de l'icone pour l'admin */
-.fa-regular{
-	font-weight: 400;
-	position: relative;
-	bottom: 50px;
-	left: 600px;
-}
-
 /* Sizing et police pour le texte modifier en admin */
 #modif{
 	font-size: 14px;
@@ -322,10 +345,12 @@ button:hover, #portfolio i{
 	padding-left: 10px;
 }
 
+/* Mise en forme de l'icone pour l'admin */
 #portfolio i {
 	display: none;
+	font-weight: 400;
+	position: relative;
+	bottom: 50px;
+	left: 600px;
 }
 
-#portfolio i.active{
-	display:flex;
-}
