--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -28,3 +28,37 @@
     background-color: white;
     border: none;
 }
+
+.modalPage{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 420px;
+    margin: auto;
+}
+
+.modalPage h2{
+    font-size: 26px;
+    font-family: "Work Sans";
+    color: black;
+    font-weight: 400;
+    margin-bottom: 52px;
+}
+
+.modalBodyGallery{
+    border-bottom: solid 1xp #B3B3B3;
+    margin-bottom: 38px;
+}
+
+.gotoPage2{
+    width: 56%;
+    height: 36px;
+    font-family: 'Syne';
+	font-weight: 700;
+    font-size: 14px;
+	color: white;
+	background-color: #1D6154;
+	text-align: center;
+	border-radius: 60px ;
+    border: none;
+}
