--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -1,3 +1,4 @@
+/* Sizing et positionnement du wrapper modal et couleur appliqué */
 .modalWrapper{
     position: fixed;
     top: 0;
@@ -10,6 +11,7 @@
     z-index: 1000;
 }
 
+/* Réglages de la largeur et longeur de la box modale en responsive , ajout d'une marge interne et fond en blanc */
 .modalContent{
     width: 630px;
     height: 680px;
@@ -19,8 +21,11 @@
     padding: 25px;
 }
 
+/* Mise en disposition flex de l'élement groupant le bouton fermeture et page de retour 
+en inversé pour garder le positionnement voulu à l'apparition du bouton retour */
 .modalMenu{
     display: flex;
+    flex-direction: row-reverse;
     justify-content: space-between;
 }
 
@@ -45,11 +50,38 @@
     margin-bottom: 52px;
 }
 
+/* Mise en disposition de grille à 5 colonne et ajout des espacement comme sur la maquette ainsi que des marges  */
 .modalBodyGallery{
-    border-bottom: solid 1xp #B3B3B3;
     margin-bottom: 38px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    row-gap: 29px;
+    column-gap: 9px;
+    border-bottom: solid 1px #B3B3B3;
+    padding-bottom: 67.3px;
 }
 
+.modalBodyGallery .imgWorks{
+    object-fit: cover;
+    width: 100%;
+}
+
+/* Mise en position relative pour permettre d'indiquer de placer son enfant */
+.modalBodyGallery figure{
+    position: relative;
+}
+
+/* Mise en position par rapport au parent avec absolute, top et right, mise en place d'un curseur */
+.imgRecycleBin{
+    object-fit: cover;
+    position: absolute;
+    z-index: 10;
+    top: 6px;
+    right: 5px;
+    cursor: pointer;
+}
+
+/* Mise en forme du bouton identique à la maquette */
 .gotoPage2{
     width: 56%;
     height: 36px;
