--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -1,3 +1,7 @@
+/**************************************************** GLOBALE  *******************************************************/
+/**************************************************************************************************************************/
+/**************************************************************************************************************************/
+
 /* Sizing et positionnement du wrapper modal et couleur appliqué */
 .modalWrapper{
     position: fixed;
@@ -14,11 +18,13 @@
 /* Réglages de la largeur et longeur de la box modale en responsive , ajout d'une marge interne et fond en blanc */
 .modalContent{
     width: 630px;
-    height: 680px;
+    height: 688px;
     max-width: calc(100vh - 25px);
     max-height: calc(100vh - 25px);
     background-color: white;
-    padding: 25px;
+    padding: 25px 30px;
+    border-radius: 10px;
+    box-sizing: border-box;
 }
 
 /* Mise en disposition flex de l'élement groupant le bouton fermeture et page de retour 
@@ -27,13 +33,18 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
+    height: 24px;
 }
 
 .modalMenu button{
     background-color: white;
     border: none;
+    width: 24px;
 }
 
+/**************************************************** MODAL PAGE 1  *******************************************************/
+/**************************************************************************************************************************/
+/**************************************************************************************************************************/
 .modalPage{
     display: flex;
     flex-direction: column;
@@ -47,10 +58,12 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
     font-family: "Work Sans";
     color: black;
     font-weight: 400;
-    margin-bottom: 52px;
+    margin-bottom: 46px;
+    margin-top: 10px;
 }
 
-/* Mise en disposition de grille à 5 colonne et ajout des espacement comme sur la maquette ainsi que des marges  */
+/* Mise en disposition de grille à 5 colonne et ajout des espacement comme sur la maquette ainsi que des marges 
+mise en overflow scroll pour permettre une barre de défilement pour la présence de nombreux projets */
 .modalBodyGallery{
     margin-bottom: 38px;
     display: grid;
@@ -59,6 +72,7 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
     column-gap: 9px;
     border-bottom: solid 1px #B3B3B3;
     padding-bottom: 67.3px;
+    overflow: scroll;
 }
 
 .modalBodyGallery .imgWorks{
@@ -81,8 +95,8 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
     cursor: pointer;
 }
 
-/* Mise en forme du bouton identique à la maquette */
-.gotoPage2{
+/* Mise en forme des boutons identique à la maquette */
+.gotoPage2, .btnForm{
     width: 56%;
     height: 36px;
     font-family: 'Syne';
@@ -93,4 +107,85 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
 	text-align: center;
 	border-radius: 60px ;
     border: none;
+}
+
+/**************************************************** MODAL PAGE 2  *******************************************************/
+/**************************************************************************************************************************/
+/**************************************************************************************************************************/
+#js-modal-title2{
+    margin-bottom: 36px;
+}
+
+#js-modal-form label{
+    font-weight: 500;
+    margin-bottom: 10px;
+}
+
+.modalBodyForm{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-bottom: solid 1px #B3B3B3;
+    padding-bottom: 47px;
+}
+
+.dropBox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+    margin-bottom: 30px;
+    background-color: #E8F1F6;
+    border-radius: 3px;
+    height: 169px;
+}
+
+.dropBox input{
+    visibility: hidden;
+}
+
+.dropBox label{
+    cursor: pointer;
+}
+
+.dropBox img{
+    margin-top: 13px;
+}
+
+.dropBox p{
+    color: rgba(68, 68, 68, 1);
+}
+
+#js-modal-btnValidate{
+    width:237px;
+    margin-top: 32px;
+}
+
+#js-form-title{
+    margin-bottom: 21px;
+}
+
+.modalFormInput{
+    height:51px;
+    border: none;
+    filter: drop-shadow(0px 4px 14px rgba(0, 0, 0, 0.09));
+}
+
+/* Suppresion de l'apparence de base du select pour le designer avec plus de liberté, couleur de fond et redimensionnement en largeur */
+#js-form-list{
+    appearance: none;
+    background-color: white;
+    width: 100%;
+}
+
+.dropList{
+    position: relative;
+}
+
+/* Positionnement du chevron de la liste catégories par rapport à sa div parent créer à cet effet */
+.dropdownMark{
+    position: absolute;
+    top: 20px;
+    right: 32px;
+    cursor: pointer;
 }
