--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -78,7 +78,7 @@ mise en overflow scroll pour permettre une barre de défilement pour la présenc
 .modalBodyGallery .imgWorks{
     object-fit: cover;
     width: 100%;
-    height: 100%;
+    min-height: 102px;
 }
 
 /* Mise en position relative pour permettre d'indiquer de placer son enfant */
