Ajout gesiton erreur formulaire identification

--- a/FrontEnd/assets/formStyle.css
+++ b/FrontEnd/assets/formStyle.css
@@ -176,3 +176,9 @@ et centrage */
 	align-items:center;
 	margin-top: 355px;
 }
+
+.infoError{
+	color: red;
+	margin-top: 10px;
+	text-align: center;
+}
