--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -17,9 +17,9 @@
 
 /* Réglages de la largeur et longeur de la box modale en responsive , ajout d'une marge interne et fond en blanc */
 .modalContent{
-    width: 630px;
+    width: 90vw;
     height: 688px;
-    max-width: calc(100vh - 25px);
+    max-width: 630px;
     max-height: calc(100vh - 25px);
     background-color: white;
     padding: 25px 30px;
@@ -66,6 +66,7 @@ en inversé pour garder le positionnement voulu à l'apparition du bouton retour
 mise en overflow scroll pour permettre une barre de défilement pour la présence de nombreux projets */
 .modalBodyGallery{
     margin-bottom: 38px;
+    max-height: 442px;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     row-gap: 29px;
@@ -117,7 +118,7 @@ mise en overflow scroll pour permettre une barre de défilement pour la présenc
     margin-bottom: 36px;
 }
 
-label[for="js-form-title"], label[for="js-form-list"]{
+label[for="js-form-title"], #dropListTitle{
     font-weight: 500;
     margin-bottom: 10px;
 }
@@ -198,12 +199,6 @@ Paramètrage de son deisgn pour qu'il prenne l'apparence voulu sur la maquette c
     filter: drop-shadow(0px 4px 14px rgba(0, 0, 0, 0.09));
 }
 
-/* Suppresion de l'apparence de base du select pour le designer avec plus de liberté, couleur de fond et redimensionnement en largeur */
-#js-form-list{
-    appearance: none;
-    background-color: white;
-    width: 100%;
-}
 
 /* Mise en position relative pour pouvoir positionner son élément enfant qui est en absolute, ajout de la bordure et de la marge inférieur */
 .dropList{
