--- a/FrontEnd/assets/formStyle.css
+++ b/FrontEnd/assets/formStyle.css
@@ -159,6 +159,7 @@ nav li a{
 	font-size: 14px;
 	text-decoration: underline;
 	padding: 1px;
+	color: black;
 }
 
 /* Mise en position des conditions générales */
