Modifications zone filtres

--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -261,7 +261,7 @@ Paramètrage de son deisgn pour qu'il prenne l'apparence voulu sur la maquette c
     cursor: pointer;
 }
 
-#form-error{
+#form-error, #form-error-2{
     text-align: center;
     width: 300px;
 }
