Gestion affichage erreur pour une suppresion de projet avec connexion api absente

--- a/FrontEnd/assets/modal.css
+++ b/FrontEnd/assets/modal.css
@@ -111,6 +111,10 @@ mise en overflow scroll pour permettre une barre de défilement pour la présenc
     border: none;
 }
 
+.gotoPage2{
+    margin-bottom: 15px;
+}
+
 /**************************************************** MODAL PAGE 2  *******************************************************/
 /**************************************************************************************************************************/
 /**************************************************************************************************************************/
